// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete component matches the snapshot #styles when expandedClass is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -20,11 +20,11 @@
        id="search.icon.svg"
      />
    </button>
     
    <div
-     class="expandedContainer"
+     class="expandedContainer $style.customExpandedClass"
    >
      <ul
        class="suggestions"
        data-suggestions=""
      >
`;

exports[`Autocomplete component matches the snapshot #styles when inputClass is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  <div
    class="wrapper"
  >
    <baseinput-stub
-     class="baseInput"
+     class="baseInput $style.customInputClass"
      classes=""
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
`;

exports[`Autocomplete component matches the snapshot #styles when listClass is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -23,11 +23,11 @@
     
    <div
      class="expandedContainer"
    >
      <ul
-       class="suggestions"
+       class="suggestions $style.customListClass"
        data-suggestions=""
      >
        <li
          class="suggestion"
          data-suggestion-value="0"
`;

exports[`Autocomplete component matches the snapshot #styles when listItemClass is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -27,33 +27,33 @@
      <ul
        class="suggestions"
        data-suggestions=""
      >
        <li
-         class="suggestion"
+         class="suggestion $style.customListItemSyle"
          data-suggestion-value="0"
        >
          <span />
           
          <baseicon-stub
            class="suggestionIcon"
            id="next.icon.svg"
          />
        </li>
        <li
-         class="suggestion"
+         class="suggestion $style.customListItemSyle"
          data-suggestion-value="1"
        >
          <span />
           
          <baseicon-stub
            class="suggestionIcon"
            id="next.icon.svg"
          />
        </li>
        <li
-         class="suggestion"
+         class="suggestion $style.customListItemSyle"
          data-suggestion-value="2"
        >
          <span />
           
          <baseicon-stub
`;

exports[`Autocomplete component matches the snapshot when component is mounted 1`] = `
<div
  class="wrapper"
>
  <baseinput-stub
    class="baseInput"
    classes=""
    model=""
    name="searchInput"
    placeholder=""
    size="medium"
    type="search"
    value=""
  />
   
  <button
    class="buttonSearch"
    type="submit"
  >
    <baseicon-stub
      id="search.icon.svg"
    />
  </button>
   
  <!---->
</div>
`;

exports[`Autocomplete component matches the snapshot when prop expanded is changed to false 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -19,66 +19,7 @@
      <baseicon-stub
        id="search.icon.svg"
      />
    </button>
     
-   <div
-     class="expandedContainer"
-   >
-     <ul
-       class="suggestions"
-       data-suggestions=""
-     >
-       <li
-         class="suggestion"
-         data-suggestion-value="0"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 25mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="1"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 50mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="2"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 150mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-     </ul>
-      
    <!---->
-      
-   </div>
  </div>
`;

exports[`Autocomplete component matches the snapshot when prop highlighterKey is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value="ibu"
+     value="Con"
    />
     
    <button
      class="buttonSearch"
      type="submit"
@@ -32,13 +32,13 @@
          class="suggestion"
          data-suggestion-value="0"
        >
          <span>
            <strong>
-             Ibu
+             Con
            </strong>
-           profeno 25mg
+           sulta
          </span>
           
          <baseicon-stub
            class="suggestionIcon"
            id="next.icon.svg"
@@ -47,14 +47,11 @@
        <li
          class="suggestion"
          data-suggestion-value="1"
        >
          <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 50mg
+           Minuto
          </span>
           
          <baseicon-stub
            class="suggestionIcon"
            id="next.icon.svg"
@@ -63,14 +60,11 @@
        <li
          class="suggestion"
          data-suggestion-value="2"
        >
          <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 150mg
+           Bleeza
          </span>
           
          <baseicon-stub
            class="suggestionIcon"
            id="next.icon.svg"
`;

exports[`Autocomplete component matches the snapshot when prop inputName is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,11 @@
  >
    <baseinput-stub
      class="baseInput"
      classes=""
      model=""
-     name="searchInput"
+     name="cr"
      placeholder=""
      size="medium"
      type="search"
      value=""
    />
`;

exports[`Autocomplete component matches the snapshot when prop placeholder is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
    <baseinput-stub
      class="baseInput"
      classes=""
      model=""
      name="searchInput"
-     placeholder=""
+     placeholder="this is a placeholder"
      size="medium"
      type="search"
      value=""
    />
     
`;

exports[`Autocomplete component matches the snapshot when prop term is passed 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,8 @@
  <div
    class="wrapper"
+   value="consulta"
  >
    <baseinput-stub
      class="baseInput"
      classes=""
      model=""
`;

exports[`Autocomplete component matches the snapshot when user inputs term 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,19 +7,78 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value=""
+     value="ibu"
    />
     
    <button
      class="buttonSearch"
      type="submit"
    >
      <baseicon-stub
        id="search.icon.svg"
      />
    </button>
+    
+   <div
+     class="expandedContainer"
+   >
+     <ul
+       class="suggestions"
+       data-suggestions=""
+     >
+       <li
+         class="suggestion"
+         data-suggestion-value="0"
+       >
+         <span>
+           <strong>
+             Ibu
+           </strong>
+           profeno 25mg
+         </span>
           
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
+       </li>
+       <li
+         class="suggestion"
+         data-suggestion-value="1"
+       >
+         <span>
+           <strong>
+             Ibu
+           </strong>
+           profeno 50mg
+         </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
+       </li>
+       <li
+         class="suggestion"
+         data-suggestion-value="2"
+       >
+         <span>
+           <strong>
+             Ibu
+           </strong>
+           profeno 150mg
+         </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
+       </li>
+     </ul>
+      
      <!---->
+      
+   </div>
  </div>
`;

exports[`Autocomplete component when templates are passed through slots when "footerListSuggestions" slot is passed render "footerListSuggestions" while searching for the term 1`] = `
<div
  class="wrapper"
>
  <baseinput-stub
    class="baseInput"
    classes=""
    model=""
    name="searchInput"
    placeholder=""
    size="medium"
    type="search"
    value="ibu"
  />
   
  <button
    class="buttonSearch"
    type="submit"
  >
    <baseicon-stub
      id="search.icon.svg"
    />
  </button>
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    >
      <li
        class="suggestion"
        data-suggestion-value="0"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 25mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="1"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 50mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="2"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 150mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
    </ul>
     
    <!---->
     
    <span>
      Footer da lista
    </span>
  </div>
</div>
`;

exports[`Autocomplete component when templates are passed through slots when "input" slot is passed when input in slot is changed 1`] = `
<div
  class="wrapper"
>
  <input
    autocomplete="off"
    name="termo"
    placeholder="Busque por medicamento, substância ou produto..."
    type="search"
  />
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    >
      <li
        class="suggestion"
        data-suggestion-value="0"
      >
        <span>
          Ibuprofeno 25mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="1"
      >
        <span>
          Ibuprofeno 50mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="2"
      >
        <span>
          Ibuprofeno 150mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
    </ul>
     
    <!---->
     
  </div>
</div>
`;

exports[`Autocomplete component when templates are passed through slots when "input" slot is passed when input in slot is focused 1`] = `
<div
  class="wrapper"
>
  <input
    autocomplete="off"
    name="termo"
    placeholder="Busque por medicamento, substância ou produto..."
    type="search"
  />
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    />
      
  </div>
</div>
`;

exports[`Autocomplete component when templates are passed through slots when "input" slot is passed when input in slot is keydown 1`] = `
<div
  class="wrapper"
>
  <input
    autocomplete="off"
    name="termo"
    placeholder="Busque por medicamento, substância ou produto..."
    type="search"
  />
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    >
      <li
        class="suggestion hovered "
        data-suggestion-value="0"
      >
        <span>
          Ibuprofeno 25mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="1"
      >
        <span>
          Ibuprofeno 50mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
      <li
        class="suggestion"
        data-suggestion-value="2"
      >
        <span>
          Ibuprofeno 150mg
        </span>
         
        <baseicon-stub
          class="suggestionIcon"
          id="next.icon.svg"
        />
      </li>
    </ul>
     
    <!---->
     
  </div>
</div>
`;

exports[`Autocomplete component when templates are passed through slots when "listItem" slot is passed when listItem is rendered 1`] = `
<div
  class="wrapper"
>
  <baseinput-stub
    class="baseInput"
    classes=""
    model=""
    name="searchInput"
    placeholder=""
    size="medium"
    type="search"
    value="ibu"
  />
   
  <button
    class="buttonSearch"
    type="submit"
  >
    <baseicon-stub
      id="search.icon.svg"
    />
  </button>
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    >
      <li
        class="suggestion"
        data-suggestion-value="0"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 25mg
        </span>
      </li>
      <li
        class="suggestion"
        data-suggestion-value="1"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 50mg
        </span>
      </li>
      <li
        class="suggestion"
        data-suggestion-value="2"
      >
        <span>
          <strong>
            Ibu
          </strong>
          profeno 150mg
        </span>
      </li>
    </ul>
     
    <!---->
     
  </div>
</div>
`;

exports[`Autocomplete component when templates are passed through slots when "listItem" slot is passed when user inputs term and nagivate in the suggestions with the keyboard when press ArrowDown 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value="ibu"
+     value="Ibuprofeno 25mg"
    />
     
    <button
      class="buttonSearch"
      type="submit"
@@ -27,19 +27,24 @@
      <ul
        class="suggestions"
        data-suggestions=""
      >
        <li
-         class="suggestion"
+         class="suggestion hovered "
          data-suggestion-value="0"
        >
          <span>
            <strong>
              Ibu
            </strong>
            profeno 25mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
        <li
          class="suggestion"
          data-suggestion-value="1"
        >
@@ -47,10 +52,15 @@
            <strong>
              Ibu
            </strong>
            profeno 50mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
        <li
          class="suggestion"
          data-suggestion-value="2"
        >
@@ -58,10 +68,15 @@
            <strong>
              Ibu
            </strong>
            profeno 150mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
      </ul>
       
      <!---->
       
`;

exports[`Autocomplete component when templates are passed through slots when "listItem" slot is passed when user inputs term and nagivate in the suggestions with the keyboard when press ArrowUp and there is no other element selected  1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value="ibu"
+     value="Ibuprofeno 150mg"
    />
     
    <button
      class="buttonSearch"
      type="submit"
@@ -36,10 +36,15 @@
            <strong>
              Ibu
            </strong>
            profeno 25mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
        <li
          class="suggestion"
          data-suggestion-value="1"
        >
@@ -47,21 +52,31 @@
            <strong>
              Ibu
            </strong>
            profeno 50mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
        <li
-         class="suggestion"
+         class="suggestion hovered "
          data-suggestion-value="2"
        >
          <span>
            <strong>
              Ibu
            </strong>
            profeno 150mg
          </span>
+          
+         <baseicon-stub
+           class="suggestionIcon"
+           id="next.icon.svg"
+         />
        </li>
      </ul>
       
      <!---->
       
`;

exports[`Autocomplete component when templates are passed through slots when "listItem" slot is passed when user inputs term and nagivate in the suggestions with the keyboard when user inputs term and press esc 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -19,51 +19,7 @@
      <baseicon-stub
        id="search.icon.svg"
      />
    </button>
     
-   <div
-     class="expandedContainer"
-   >
-     <ul
-       class="suggestions"
-       data-suggestions=""
-     >
-       <li
-         class="suggestion"
-         data-suggestion-value="0"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 25mg
-         </span>
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="1"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 50mg
-         </span>
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="2"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 150mg
-         </span>
-       </li>
-     </ul>
-      
    <!---->
-      
-   </div>
  </div>
`;

exports[`Autocomplete component when templates are passed through slots when "placeholderSuggestion" slot is passed render "placeholderSuggestion" while searching for the term 1`] = `
<div
  class="wrapper"
>
  <baseinput-stub
    class="baseInput"
    classes=""
    model=""
    name="searchInput"
    placeholder=""
    size="medium"
    type="search"
    value="ibu"
  />
   
  <button
    class="buttonSearch"
    type="submit"
  >
    <baseicon-stub
      id="search.icon.svg"
    />
  </button>
   
  <div
    class="expandedContainer"
  >
    <ul
      class="suggestions"
      data-suggestions=""
    />
     
    <span>
      Buscando
    </span>
     
  </div>
</div>
`;

exports[`Autocomplete component when user inputs term and nagivate in the suggestions with the keyboard when press ArrowDown 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value="ibu"
+     value="Ibuprofeno 25mg"
    />
     
    <button
      class="buttonSearch"
      type="submit"
@@ -27,11 +27,11 @@
      <ul
        class="suggestions"
        data-suggestions=""
      >
        <li
-         class="suggestion"
+         class="suggestion hovered "
          data-suggestion-value="0"
        >
          <span>
            <strong>
              Ibu
`;

exports[`Autocomplete component when user inputs term and nagivate in the suggestions with the keyboard when press ArrowUp and there is no other element selected  1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      model=""
      name="searchInput"
      placeholder=""
      size="medium"
      type="search"
-     value="ibu"
+     value="Ibuprofeno 150mg"
    />
     
    <button
      class="buttonSearch"
      type="submit"
@@ -59,11 +59,11 @@
            class="suggestionIcon"
            id="next.icon.svg"
          />
        </li>
        <li
-         class="suggestion"
+         class="suggestion hovered "
          data-suggestion-value="2"
        >
          <span>
            <strong>
              Ibu
`;

exports[`Autocomplete component when user inputs term and nagivate in the suggestions with the keyboard when user inputs a term and press esc 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -19,66 +19,7 @@
      <baseicon-stub
        id="search.icon.svg"
      />
    </button>
     
-   <div
-     class="expandedContainer"
-   >
-     <ul
-       class="suggestions"
-       data-suggestions=""
-     >
-       <li
-         class="suggestion"
-         data-suggestion-value="0"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 25mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="1"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 50mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-       <li
-         class="suggestion"
-         data-suggestion-value="2"
-       >
-         <span>
-           <strong>
-             Ibu
-           </strong>
-           profeno 150mg
-         </span>
-          
-         <baseicon-stub
-           class="suggestionIcon"
-           id="next.icon.svg"
-         />
-       </li>
-     </ul>
-      
    <!---->
-      
-   </div>
  </div>
`;
